underscore favicon for now :)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
   <title>Fritx's Blog</title>
 
+  <!-- favicon -->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
   <!-- import styles -->
   <link rel="stylesheet" href="vendor/blog.css">
 </head>
