--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 </head>
 <body>
 
+<!-- fill the img in shared links -->
+<img class="img-holder" src="p/avatar.jpg">
+
 <!-- settle contents -->
 <div class="contents" id="contents">
   <div class="sidebar">
@@ -23,6 +26,7 @@
       <div class="sidebar-page" id="sidebar-page"></div>
     </div>
   </div>
+
   <div class="main" id="main">
     <div class="main-inner">
       <div class="main-page" id="main-page"></div>
