--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <!-- import vendor scripts -->
 <script src="vendor/jquery-1.11.1.min.js"></script>
 <script src="vendor/marked-0.3.2.min.js"></script>
+<script src="vendor/wechat.js"></script>
 <script src="vendor/blog.js"></script>
 </body>
 </html>
