--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 <!-- fill the img in shared links -->
-<img class="img-holder" src="p/avatar.jpg">
+<img class="img-holder" id="img-holder" src="p/avatar.jpg">
 
 <a target="_blank" href="https://github.com/fritx/blog">
   <img class="fork-me" src="p/fork.png">
