img holder for wechat sharing

--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
 </head>
 <body>
 
-<!-- fill the img in shared links -->
-<img class="img-holder" id="img-holder" src="p/holder.jpg">
-
 <a target="_blank" href="https://github.com/fritx/blog">
   <img class="fork-me" src="p/fork.png">
 </a>
@@ -40,6 +37,9 @@
     </div>
   </div>
 </div>
+
+<!-- fill the img in shared links -->
+<img class="img-holder" id="img-holder" src="p/avatar.jpg">
 
 <!-- import vendor scripts -->
 <script src="vendor/jquery-1.11.1.min.js"></script>
