--- a/index.html
+++ b/index.html
@@ -45,5 +45,16 @@
 <script src="vendor/jquery-1.11.1.min.js"></script>
 <script src="vendor/marked-0.3.2.min.js"></script>
 <script src="vendor/blog.js"></script>
+
+<!-- import baidu stats -->
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?06db2f367fb94faed2f2ec0f85f759c0";
+  var s = document.getElementsByTagName("script")[0];
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </body>
 </html>
