1. 添加文章图片阴影 2. 更换baidu统计 3. 修复lagou样式 4. Fritx's => Fritx' 5. 更新页面字体，屏蔽a:visited颜色 6. 04/keeping-determined => 05/keeping-determined

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- responsive -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-  <title>Fritx's Blog</title>
+  <title>Fritx' Blog</title>
 
   <!-- favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -59,8 +59,8 @@
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?06db2f367fb94faed2f2ec0f85f759c0";
-  var s = document.getElementsByTagName("script")[0];
+  hm.src = "//hm.baidu.com/hm.js?025c58501ef381a39ac19553801cd6d5";
+  var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
