--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </script>
 
   <!-- import vendor styles -->
+  <link rel="stylesheet" href="vendor/hljs-github.css">
   <link rel="stylesheet" href="vendor/blog.css">
 </head>
 <body>
@@ -52,6 +53,7 @@
 <!-- import vendor scripts -->
 <script src="vendor/jquery-1.11.1.min.js"></script>
 <script src="vendor/marked-0.3.2.min.js"></script>
+<script src="vendor/highlight.pack.js"></script>
 <script src="vendor/blog.js"></script>
 
 <!-- import baidu stats -->
