更换代码高亮 hljs-railscasts.css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </script>
 
   <!-- import vendor styles -->
-  <link rel="stylesheet" href="vendor/hljs-github.css">
+  <link rel="stylesheet" href="vendor/hljs-railscasts.css">
   <link rel="stylesheet" href="vendor/blog.css">
 </head>
 <body>
