* 换一个花样装逼 代码高亮

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </script>
 
   <!-- import vendor styles -->
-  <link rel="stylesheet" href="vendor/hljs-railscasts.css">
+  <link rel="stylesheet" href="vendor/zenburn.css">
   <link rel="stylesheet" href="vendor/blog.css">
 </head>
 <body>
@@ -62,7 +62,7 @@ var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
   hm.src = "//hm.baidu.com/hm.js?025c58501ef381a39ac19553801cd6d5";
-  var s = document.getElementsByTagName("script")[0]; 
+  var s = document.getElementsByTagName("script")[0];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
