--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- responsive -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-  <title>Fritx' Blog</title>
+  <title>&nbsp;</title>
 
   <!-- favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
