--- a/markppt/index.html
+++ b/markppt/index.html
@@ -14,6 +14,7 @@
     </head>
     <body>
         <img src="ppt_/icon_400x400.png">
+        <script src="ppt_/purify.min.js"></script>
         <script src="ppt_/marked.min.js"></script>
         <script src="ppt_/jquery.min.js"></script>
         <script src="ppt_/jquery.waitforimages.min.js"></script>
@@ -21,6 +22,6 @@
         <script src="ppt_/highlight.pack.js"></script>
 
         <script src="ppt_/ppt.js"></script>
-        <script>ppt.setup({"theme":"dark","url":"index.md"})</script>
+        <script>ppt.setup({"arbitrary":true,"theme":"dark","url":"index.md"})</script>
     </body>
 </html>
